--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+        <activity android:name=".ConfigPage"></activity>
+        <activity android:name=".GamePage"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
