Added a new feature: the game over screen appears after the player reaches X score (currently 15, but should be changed later).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".ConfigPage"></activity>
         <activity android:name=".GamePage"></activity>
         <activity android:name=".ExitPage"></activity>
+        <activity android:name=".WinPage"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
